public_html/style.css
img[src="headshot.jpeg"] {
    width: 250px;
    height: 250px;
}

img {
    width: 50px;
    height: 50px;
}

button {
    width: 125px;
}

.work {
    position: relative;
    float: left;
    width: 274px;
}

.work.col-6 img {
    width: 150px;
    opacity: 0.8;
}

.work img {
    width: 250px;
    opacity: 0.8;
}

.work h3 {
    position: absolute;
    bottom: 20px;
    width: 250px;
    padding: 15px;
    margin-bottom: 0;
    font-weight: 300;
    line-height: 30px;
    color: #ffffff;
    text-align: center;
    background: #80a4dd;
    border-bottom: 0;
    border-radius: 0 0 15px 15px;
}

.sized {
    height: 200px;
    width: 100px;
    border-radius: 15px;
}

img[alt="Picture of Section of World's Largest Puzzle"] {
    height: 600px;
}

#profile, #skills, #fun-fact, button{
    background-color: #fc8c2e;
}

/*button {*/
/*    background-color: #5f9a2b;*/
/*}*/

.title {
    /*color: #5f9a2b;*/
    font-weight: bolder;
}

